hphp/hack/test/typecheck/array_sub.php.exp
File "array_sub.php", line 12, characters 27-40:
Some type arguments violate their constraints (Typing[4323])
  File "hackarray.hhi", line 29, characters 49-50:
  `Tk` is a constrained type parameter
  File "hackarray.hhi", line 29, characters 55-62:
  This type constraint is violated
  File "hackarray.hhi", line 29, characters 55-62:
  Expected `arraykey`
  File "array_sub.php", line 12, characters 34-35:
  But got `T1`
File "array_sub.php", line 21, characters 12-13:
Invalid argument (Typing[4110])
  File "array_sub.php", line 12, characters 27-40:
  Expected `dict<_, _>`
  File "array_sub.php", line 20, characters 15-25:
  But got `vec<int>`
